--- a/requirements.txt
+++ b/requirements.txt
@@ -7,22 +7,18 @@ anyio==3.7.1 ; python_version >= "3.11" and python_version < "3.12"
 asn1crypto==1.5.1 ; python_version >= "3.11" and python_version < "3.12"
 async-timeout==4.0.3 ; python_version >= "3.11" and python_full_version < "3.11.3"
 attrs==23.2.0 ; python_version >= "3.11" and python_version < "3.12"
-azure-core==1.30.1 ; python_version >= "3.11" and python_version < "3.12"
-azure-identity==1.16.0 ; python_version >= "3.11" and python_version < "3.12"
 beautifulsoup4==4.12.3 ; python_version >= "3.11" and python_version < "3.12"
 billiard==4.2.0 ; python_version >= "3.11" and python_version < "3.12"
 blinker==1.7.0 ; python_version >= "3.11" and python_version < "3.12"
 bs4==0.0.2 ; python_version >= "3.11" and python_version < "3.12"
 celery[redis]==5.4.0 ; python_version >= "3.11" and python_version < "3.12"
 certifi==2024.2.2 ; python_version >= "3.11" and python_version < "3.12"
-cffi==1.16.0 ; python_version >= "3.11" and python_version < "3.12" and platform_python_implementation != "PyPy"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "3.12"
 click-didyoumean==0.3.1 ; python_version >= "3.11" and python_version < "3.12"
 click-plugins==1.1.1 ; python_version >= "3.11" and python_version < "3.12"
 click-repl==0.3.0 ; python_version >= "3.11" and python_version < "3.12"
 click==8.1.7 ; python_version >= "3.11" and python_version < "3.12"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "3.12"
-cryptography==42.0.5 ; python_version >= "3.11" and python_version < "3.12"
 dataclasses-json==0.6.4 ; python_version >= "3.11" and python_version < "3.12"
 demjson3==3.0.6 ; python_version >= "3.11" and python_version < "3.12"
 deprecated==1.2.14 ; python_version >= "3.11" and python_version < "3.12"
@@ -48,61 +44,53 @@ jinja2==3.1.3 ; python_version >= "3.11" and python_version < "3.12"
 joblib==1.4.0 ; python_version >= "3.11" and python_version < "3.12"
 kombu==5.3.7 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-agent-openai==0.1.7 ; python_version >= "3.11" and python_version < "3.12"
-llama-index-core==0.10.30 ; python_version >= "3.11" and python_version < "3.12"
-llama-index-embeddings-azure-openai==0.1.7 ; python_version >= "3.11" and python_version < "3.12"
-llama-index-embeddings-openai==0.1.8 ; python_version >= "3.11" and python_version < "3.12"
-llama-index-indices-managed-llama-cloud==0.1.5 ; python_version >= "3.11" and python_version < "3.12"
+llama-index-core==0.10.32 ; python_version >= "3.11" and python_version < "3.12"
+llama-index-embeddings-openai==0.1.9 ; python_version >= "3.11" and python_version < "3.12"
+llama-index-indices-managed-llama-cloud==0.1.6 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-legacy==0.9.48 ; python_version >= "3.11" and python_version < "3.12"
-llama-index-llms-azure-openai==0.1.6 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-llms-openai==0.1.16 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-multi-modal-llms-openai==0.1.5 ; python_version >= "3.11" and python_version < "3.12"
-llama-index-program-openai==0.1.5 ; python_version >= "3.11" and python_version < "3.12"
+llama-index-program-openai==0.1.6 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-question-gen-openai==0.1.3 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-readers-file==0.1.1 ; python_version >= "3.11" and python_version < "3.12"
 llama-index-readers-llama-parse==0.1.4 ; python_version >= "3.11" and python_version < "3.12"
 llama-index==0.10.9 ; python_version >= "3.11" and python_version < "3.12"
-llama-parse==0.4.1 ; python_version >= "3.11" and python_version < "3.12"
-llamaindex-py-client==0.1.18 ; python_version >= "3.11" and python_version < "3.12"
+llama-parse==0.4.2 ; python_version >= "3.11" and python_version < "3.12"
+llamaindex-py-client==0.1.19 ; python_version >= "3.11" and python_version < "3.12"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "3.12"
 markdown==3.6 ; python_version >= "3.11" and python_version < "3.12"
 markupsafe==2.1.5 ; python_version >= "3.11" and python_version < "3.12"
 marshmallow==3.21.1 ; python_version >= "3.11" and python_version < "3.12"
 mdurl==0.1.2 ; python_version >= "3.11" and python_version < "3.12"
-msal-extensions==1.1.0 ; python_version >= "3.11" and python_version < "3.12"
-msal==1.28.0 ; python_version >= "3.11" and python_version < "3.12"
 multidict==6.0.5 ; python_version >= "3.11" and python_version < "3.12"
 mypy-extensions==1.0.0 ; python_version >= "3.11" and python_version < "3.12"
 nest-asyncio==1.6.0 ; python_version >= "3.11" and python_version < "3.12"
 networkx==3.3 ; python_version >= "3.11" and python_version < "3.12"
 nltk==3.8.1 ; python_version >= "3.11" and python_version < "3.12"
 numpy==1.26.4 ; python_version >= "3.11" and python_version < "3.12"
-openai==1.23.2 ; python_version >= "3.11" and python_version < "3.12"
+openai==1.23.6 ; python_version >= "3.11" and python_version < "3.12"
 packaging==23.2 ; python_version >= "3.11" and python_version < "3.12"
 pandas==2.2.2 ; python_version >= "3.11" and python_version < "3.12"
 pg8000==1.31.1 ; python_version >= "3.11" and python_version < "3.12"
 pgvector==0.2.5 ; python_version >= "3.11" and python_version < "3.12"
 pillow==10.3.0 ; python_version >= "3.11" and python_version < "3.12"
-portalocker==2.8.2 ; python_version >= "3.11" and python_version < "3.12"
 prettytable==3.10.0 ; python_version >= "3.11" and python_version < "3.12"
 prompt-toolkit==3.0.36 ; python_version >= "3.11" and python_version < "3.12"
 psycopg2-binary==2.9.9 ; python_version >= "3.11" and python_version < "3.12"
-pycparser==2.22 ; python_version >= "3.11" and python_version < "3.12" and platform_python_implementation != "PyPy"
-pydantic-core==2.18.1 ; python_version >= "3.11" and python_version < "3.12"
-pydantic==2.7.0 ; python_version >= "3.11" and python_version < "3.12"
+pydantic-core==2.18.2 ; python_version >= "3.11" and python_version < "3.12"
+pydantic==2.7.1 ; python_version >= "3.11" and python_version < "3.12"
 pygments==2.17.2 ; python_version >= "3.11" and python_version < "3.12"
 pyjwt==2.8.0 ; python_version >= "3.11" and python_version < "3.12"
-pyjwt[crypto]==2.8.0 ; python_version >= "3.11" and python_version < "3.12"
-pymemgpt[postgres] @ git+https://github.com/tombedor/MemGPT.git@main; python_version >= "3.11" and python_version < "3.12"
+pymemgpt[postgres] @ git+https://github.com/tombedor/MemGPT.git@3ca7f41623e94e50ae08f0ab034f45d7bc5e7274 ; python_version >= "3.11" and python_version < "3.12"
 pymupdf==1.24.2 ; python_version >= "3.11" and python_version < "3.12"
 pymupdfb==1.24.1 ; python_version >= "3.11" and python_version < "3.12"
 pypdf==3.17.4 ; python_version >= "3.11" and python_version < "3.12"
 python-box==7.1.1 ; python_version >= "3.11" and python_version < "3.12"
 python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "3.12"
 pytz==2023.4 ; python_version >= "3.11" and python_version < "3.12"
-pywin32==306 ; python_version >= "3.11" and python_version < "3.12" and platform_system == "Windows"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "3.12"
 questionary==2.0.1 ; python_version >= "3.11" and python_version < "3.12"
-redis==5.0.3 ; python_version >= "3.11" and python_version < "3.12"
+redis==5.0.4 ; python_version >= "3.11" and python_version < "3.12"
 regex==2024.4.16 ; python_version >= "3.11" and python_version < "3.12"
 requests==2.31.0 ; python_version >= "3.11" and python_version < "3.12"
 rich==13.7.1 ; python_version >= "3.11" and python_version < "3.12"
