--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,13 @@ readme = "README.md"
 python = ">=3.11,<3.12"
 pgvector = "^0.2.4"
 psycopg2-binary = "^2.9.9"
-pymemgpt = {extras = ["postgres"], git = 'https://github.com/tombedor/MemGPT.git', rev='f5124017279c3549f7bca6fdbd9b07463477907c'}
-markdown = "^3.5.1"
+pymemgpt = {extras = ["postgres"], git = 'https://github.com/tombedor/MemGPT.git', rev='37691024696eb65620670be25846926007326456'}
 sqlalchemy = "^2.0.29"
 discord = "^2.3.2"
 celery = {extras = ["redis"], version = "^5.4.0"}
 flask = "^3.0.2"
 twilio = "^9.0.3"
 gunicorn = "^21.2.0"
-fastapi = "^0.110.2"
 pyyaml = "^6.0.1"
 
 [tool.pyright]
@@ -47,46 +45,7 @@ black = {extras = ["jupyter"], version = "^24.4.2"}
 autoflake = "^2.3.0"
 pyright = "^1.1.350"
 pytest = "^8.1.1"
-memray = "^1.12.0"
-
-[tool.poetry.group.experiment.dependencies]
-tiktoken = "^0.5.1"
-nbconvert = "^7.13.1"
-unstructured = "^0.12.4"
-langchain-openai = "^0.0.5"
-langchain = "^0.0.340"
-langchainhub = "^0.1.14"
-gcsa = "^2.2.0"
-google-auth = "^2.27.0"
-deptry = "^0.15.0"
-git-python = "^1.0.3"
-gitpython = "^3.1.40"
-faiss-cpu = "^1.7.4"
-docker = "^6.1.3"
-feedparser = "^6.0.11"
-llama-hub = "^0.0.71"
-numpy = "^1.26.3"
-spacy = "^3.7.4"
-bertopic = "^0.16.0"
-scikit-learn = "^1.4.1.post1"
-spacy-llm = "^0.7.1"
-llm = "^0.13.1"
-datasets = "^2.18.0"
-peft = "^0.9.0"
-simplegmail = "^4.1.1"
-gspread = "^6.0.0"
-matplotlib = "^3.8.3"
-llama-index-vector-stores-faiss = "^0.1.2"
-pyvis = "^0.3.2"
-ipywidgets = "^8.1.2"
-jupyter = "^1.0.0"
-safetensors = "^0.4.3"
-outlines = "^0.0.40"
-torch = "^2.3.0"
-sentencepiece = "^0.2.0"
-llama-cpp-python = "^0.2.69"
-pygls = "^1.3.1"
-
+fawltydeps = "^0.15.0"
 
 [build-system]
 requires = ["poetry-core"]
