--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ click-didyoumean==0.3.1 ; python_version >= "3.11" and python_version < "3.12"
 click-plugins==1.1.1 ; python_version >= "3.11" and python_version < "3.12"
 click-repl==0.3.0 ; python_version >= "3.11" and python_version < "3.12"
 click==8.1.7 ; python_version >= "3.11" and python_version < "3.12"
-colorama==0.4.6 ; python_version >= "3.11" and python_version < "3.12"
+colorama==0.4.6 ; python_version >= "3.11" and python_version < "3.12" and platform_system == "Windows"
 dataclasses-json==0.6.5 ; python_version >= "3.11" and python_version < "3.12"
 demjson3==3.0.6 ; python_version >= "3.11" and python_version < "3.12"
 deprecated==1.2.14 ; python_version >= "3.11" and python_version < "3.12"
@@ -77,7 +77,7 @@ pydantic-core==2.18.2 ; python_version >= "3.11" and python_version < "3.12"
 pydantic==2.7.1 ; python_version >= "3.11" and python_version < "3.12"
 pygments==2.18.0 ; python_version >= "3.11" and python_version < "3.12"
 pyjwt==2.8.0 ; python_version >= "3.11" and python_version < "3.12"
-pymemgpt @ git+https://github.com/tombedor/MemGPT.git@7cc7e0d1b91026b934653b7bdbb09cd1205fd532 ; python_version >= "3.11" and python_version < "3.12"
+pymemgpt @ git+https://github.com/tombedor/MemGPT.git@293c7e5b3ac6cfc625c6c329de15a87d17374887 ; python_version >= "3.11" and python_version < "3.12"
 pypdf==4.2.0 ; python_version >= "3.11" and python_version < "3.12"
 python-box==7.1.1 ; python_version >= "3.11" and python_version < "3.12"
 python-dateutil==2.9.0.post0 ; python_version >= "3.11" and python_version < "3.12"
@@ -104,7 +104,7 @@ tenacity==8.3.0 ; python_version >= "3.11" and python_version < "3.12"
 tiktoken==0.5.2 ; python_version >= "3.11" and python_version < "3.12"
 tqdm==4.66.4 ; python_version >= "3.11" and python_version < "3.12"
 twilio==9.0.5 ; python_version >= "3.11" and python_version < "3.12"
-typer[all]==0.9.4 ; python_version >= "3.11" and python_version < "3.12"
+typer==0.12.3 ; python_version >= "3.11" and python_version < "3.12"
 typing-extensions==4.11.0 ; python_version >= "3.11" and python_version < "3.12"
 typing-inspect==0.9.0 ; python_version >= "3.11" and python_version < "3.12"
 tzdata==2024.1 ; python_version >= "3.11" and python_version < "3.12"
