--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ gunicorn = "^21.2.0"
 pyyaml = "^6.0.1"
 questionary = "^2.0.1"
 requests = "^2.32.2"
+python-redis-cache = "^3.2.0"
 
 [tool.pyright]
 include = [
