--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = ">=3.11,<3.12"
 pgvector = "^0.2.4"
 psycopg2-binary = "^2.9.9"
-pymemgpt = {git = 'https://github.com/tombedor/MemGPT.git', rev='828a5f67337b08b3089b31c94f83f9e5dd95b972'}
+pymemgpt = {git = 'https://github.com/tombedor/MemGPT.git', rev='b921c9ee726d6526e3e52213185dc6ba96490f1d'}
 sqlalchemy = "^2.0.29"
 discord = "^2.3.2"
 celery = {extras = ["redis"], version = "^5.4.0"}
@@ -20,6 +20,7 @@ pyyaml = "^6.0.1"
 questionary = "^2.0.1"
 requests = "^2.32.2"
 python-redis-cache = "^3.2.0"
+tiktoken = "^0.7.0"
 
 [tool.pyright]
 include = [
