--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ requests = "^2.32.2"
 python-redis-cache = "^3.2.0"
 tiktoken = "^0.7.0"
 spacy = "^3.7.4"
+cryptography = "^42.0.7"
 
 [tool.pyright]
 include = [
