--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ python-redis-cache = "^3.2.0"
 tiktoken = "^0.7.0"
 spacy = "^3.7.4"
 cryptography = "^42.0.7"
+gcsa = "^2.3.0"
 
 [tool.pyright]
 include = [
